# Visualgo-PyPI

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/scripts/: compare-version-date.sh  compare-version-master.sh  compare-versions-in-commit.sh  set_new_version.sh
.github/workflows/: CD-pypi-publish.yml  CD-test-pypi-publish.yml  CI-PR-dev.yml  CI-PR-master.yml  CI-PR-trunk.yml  CI-PR.yml  CI-releases.yml
docs/: conf.py  index.rst  modules.rst  visualgo.rst  visualgo.types.rst
src/visualgo/: __main__.py
src/visualgo/debugger/: __init__.py  debug_context.py  debugger.py
src/visualgo/logic/: Controller.py  DebuggerCallbacksInterface.py  UICallbacksInterface.py  __init__.py  __main__.py  controller.py  controller_callbacks.py  stats.py  structures.py  types.py
src/visualgo/structures/: BinaryTreeNode.py  DoublyLinkedList.py  LinkedList.py  List.py  Node.py  Queue.py  Set.py  Stack.py  StackLL.py  Table.py  Tree.py  TreeNode.py  TwoWayNode.py  __init__.py
src/visualgo/types/: DoublyLinkedList.py  LinkedList.py  List.py  Queue.py  Set.py  StackLL.py  Table.py  TreeNode.py  TwoWayNode.py
tests/visualgo/logic/: test_controller.py
tests/visualgo/structures/: test_BinaryTreeNode.py  test_DoublyLinkedList.py  test_LinkedList.py  test_List.py  test_Node.py  test_Queue.py  test_Set.py  test_Stack.py  test_Table.py  test_Tree.py  test_TreeNode.py  test_TwoWayNode.py
visualgo/: __init__.py
visualgo/structures/: List.py  Node.py  Queue.py  Table.py  TwoWayNode.py  __init__.py
(+38 files in other folders)
